Add new index page and border-rotate-task under new mainhub2 div add

--- a/Border-Rotate-Task.html
+++ b/Border-Rotate-Task.html
@@ -63,6 +63,7 @@
         <div class="effect"></div>
         <div class="mainhub"></div>
     </div>
+    <div class="mainhub2"></div>
 
 </body>
 
